<resources>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="api_url" translatable="false">https://e-potato.appspot.com/_ah/api/</string>
    <string name="marketURL" translatable="false">market://details?id=com.onnoeberhard.epotato</string>
    <string name="welcome">Welcome</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="sendSMSAgain">Send SMS again</string>
    <string name="enterEPIDPW">Please enter your ePotato-ID / phone number and password.</string>
    <string name="noEPID">There is no account with that ePotato-ID / phone number.</string>
    <string name="wrongPW">Wrong password :(</string>
    <string name="errorToast">An error has occurred! Sorry :(</string>
    <string name="enterEPID">Please enter your ePotato-ID or phone number.</string>
    <string name="noRecover">You can\'t recover your password, because you didn\'t set a phone number. We\'re sorry :(</string>
    <string name="newPasswordSMS">We have sent you a new password via SMS.</string>
    <string name="confirmPassword">Please enter your new password into both fields.</string>
    <string name="noPWMatch">The passwords don\'t match!</string>
    <string name="unsecurePW">The password must be at least 4 characters long!</string>
    <string name="enterNewUNPW">Please enter a username and a password.</string>
    <string name="unRegEx">The username can only contain letters, numbers, \'.\', \'-\', \'_\' and must be under 30 characters.</string>
    <string name="epidTaken">This ePotato-ID is already taken :/</string>
    <string name="enterValidPhone">Please enter a valid phone number.</string>
    <string name="validateSMS">Your ePotato validation code:\u0020</string>
    <string name="newSMSCode">A new code has been sent to:\u0020</string>
    <string name="wrongCode">The code is not correct :(</string>
    <string name="newUser">New User</string>
    <string name="newUserNotice">You logged in as a new user! Would you like to continue? Everything of the old user will be deleted!</string>
    <string name="cont">Continue</string>
    <string name="logout">Log Out</string>
    <string name="received">Received</string>
    <string name="feed">Feed</string>
    <string name="sent">Sent</string>
    <string name="newPotato">New Potato!</string>
    <string name="ad">Advertisement</string>
    <string name="contacts">Contacts</string>
    <string name="following">Following</string>
    <string name="people">People</string>
    <string name="allContacts">All Contacts</string>
    <string name="noContacts">You don\'t have any ePotato-Contacts yet!</string>
    <string name="suggestedContacts">Suggested Contacts</string>
    <string name="clickAddContacts">Click to add to contacts!</string>
    <string name="phoneContacts">Phone Contacts</string>
    <string name="clickSendInvite">Click contact to send inviation!</string>
    <string name="sendTS">Send to a total stranger!</string>
    <string name="sendFollowers">Post to Feed!</string>
    <string name="frequentContacts">Frequent Contacts</string>
    <string name="sendAllFrequents">Send to all frequent contacts!</string>
    <string name="sendOtherTS">Send to another total stranger!</string>
    <string name="whoToFollow">Who to Follow</string>
    <string name="clickToFollow">Click to follow!</string>
    <string name="readContacts">Read Contacts</string>
    <string name="contactsPermissionNotice">Please allow this app (in the next screen) to read your phone\'s contact list to show you your contacts that already use ePotato!</string>
    <string name="addContact">Add Contact</string>
    <string name="sendAllContacts">Send to all Contacts!</string>
    <string name="noMatchFound">No match found!</string>
    <string name="alreadyContact">Already a Contact!</string>
    <string name="alreadyAdded">Already added!</string>
    <string name="addToContacts">Add to Contacts</string>
    <string name="follow">Follow</string>
    <string name="alreadyFollowing">Already following!</string>
    <string name="invitation">Hi! Check out ePotato to send virtual potatoes! onnoeberhard.com/ePotato</string>
    <string name="inviteX">Invite %1$s</string>
    <string name="deleteContact">Delete Contact</string>
    <string name="deleteContactNotice">Do you want to delete this contact?</string>
    <string name="changeName">Change Name</string>
    <string name="sendEP">Send ePotato!</string>
    <string name="unfollow">Unfollow</string>
    <string name="plusContact">+ Add Contact</string>
    <string name="plusFollow">+ Follow Someone</string>
    <string name="potatoReceived">You received a potato!</string>
    <string name="newFeedPotatoes">New potatoes in feed!</string>
    <string name="noRPotatoes">No potatoes received yet ☹</string>
    <string name="noFPotatoes">No updates ☹</string>
    <string name="noSPotatoes">No potatoes sent yet ☹</string>
    <string name="followers">Followers</string>
    <string name="status">Status:\u0020</string>
    <string name="sending">Sending</string>
    <string name="errorSending">Error Sending!</string>
    <string name="sendAgain">Send Again!</string>
    <string name="addXToContacts">Add %1$s to Contacts</string>
    <string name="sendNewPotato">Send new Potato</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply!</string>
    <string name="unfollowX">Unfollow %1$s</string>
    <string name="addedToContacts">Added to Contacts.</string>
    <string name="yesterday">Yesterday</string>
    <string name="xNowUses">now uses ePotato!</string>
    <string name="yNowUse">new people now use ePotato!</string>
    <string name="sayHello">Say Hello!</string>
    <string name="sayHelloTo">Say hello to %1$s!</string>
    <string name="saveImage">Save Image</string>
    <string name="storageNotice">Please allow this app (in the next screen) to save the image to the device\'s storage!</string>
    <string name="sendPTo">Send Potato To:</string>
    <string name="savedToGal">Saved to Gallery.</string>
    <string name="noReceiver">You did not select any receivers! Would you like to close without sending?</string>
    <string name="quit">Quit</string>
    <string name="doesNotHave">\u0020doesn\'t have an ePotato-ID yet!</string>
    <string name="sendImage">Send Image</string>
    <string name="invite">Invite</string>
    <string name="skip">Skip</string>
    <string name="shareWithX">Share potato with %1$s</string>
    <string name="lessEnthusiasticNewPotato">New Potato</string>
    <string name="potatoFor">Potato for\u0020</string>
    <string name="enterMessage">Enter message</string>
    <string name="settings">Settings</string>
    <string name="changeEpid">Change ePotato-ID</string>
    <string name="enterUNPW">Please enter a username and your password.</string>
    <string name="errorINOUT">Error :( Please try logging out and in again.</string>
    <string name="conPhone">Connect with Phone Number</string>
    <string name="changePhone">Change Phone Number</string>
    <string name="changePW">Change Password</string>
    <string name="enterCurNewPW">Please enter your current and new password into the fields.</string>
    <string name="logoutOk">Do you want to log out? Everything will be saved.</string>
    <string name="delAccount">Delete Account</string>
    <string name="enterPW">Please enter your password.</string>
    <string name="restart">Restart</string>
    <string name="thankPurchase">Thank your very much for your purchase! The app needs to restart to finish the process</string>
    <string name="close">Close</string>
    <string name="sendAPotato">Send A Potato</string>
    <string name="enthusiasticOK">OK!</string>
    <string name="name">Name</string>
    <string name="enterAnEpid">Enter ePotato-ID</string>
    <string name="newEPID">New ePotato-ID</string>
    <string name="pw">Password</string>
    <string name="oldPW">Old Password</string>
    <string name="newPW">New Password</string>
    <string name="confirmNewPW">Confirm New Password</string>
    <string name="delAccountNotice">Do you really want to delete your account? This cannot be undone!</string>
    <string name="enterPassword">Enter Password</string>
    <string name="EPIDOP">ePotato-ID or Phone Number</string>
    <string name="enterSMSPw">Please enter the password you just received (or will receive shortly) at:\n%1$s</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="enterPhone">Please enter your phone number:</string>
    <string name="enterPhoneNotice">This lets your friends find you when they join ePotato.</string>
    <string name="back">Back</string>
    <string name="code">Code</string>
    <string name="enterCodeX">Please enter the code you just received (or will receive shortly) at:\n%1$s</string>
    <string name="sendNewCode">Send New Code</string>
    <string name="enterNewPW">Please enter a new password</string>
    <string name="username">Username</string>
    <string name="yourEPID">Your ePotato-ID</string>
    <string name="confPW">Confirm Password</string>
    <string name="more">More</string>
    <string name="ClickToReply">Click to reply</string>
    <string name="checkContacts">Check Contacts</string>
    <string name="reload">Reload</string>
    <string name="markRead">Mark as Read</string>
    <string name="addEPID">Add ePotato-ID</string>
    <string name="otherPotato">Other Potato!</string>
    <string name="potato">Potato</string>
    <string name="badge">Badge</string>
    <string name="general">General</string>
    <string name="feedNotificationsSum">Receive notifications for updates in your feed.</string>
    <string name="feedNotifications">Feed Notifications</string>
    <string name="tsNotice">If enabled, you can send / receive potatoes via the \'total strangers\' feature.</string>
    <string name="tsPref">Receive from \'total strangers\'</string>
    <string name="creepSum">Does not affect \'total strangers\'</string>
    <string name="creepPref">Only receive from contacts</string>
    <string name="account">Account</string>
    <string name="leaveReview">Leave a Review ☺</string>
    <string name="removeAds">Remove Ads</string>
    <string name="support">Support the developer :)</string>
    <string name="loadMore">Load more</string>
    <string name="about">About</string>
    <string name="shareImage">Share Image</string>
</resources>