<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/shareImage"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/addepid"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:title="@string/addEPID"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/checkcontacts"
        android:title="@string/checkContacts"
        app:showAsAction="never"/>

    <item
        android:id="@+id/savepotato"
        android:title="@string/saveImage"
        app:showAsAction="never"/>

    <item
        android:id="@+id/reload"
        android:title="@string/reload"
        app:showAsAction="never"/>

</menu>