<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="128dp">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="192dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/signup_epid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/yourEPID"/>

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/pw"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/signup_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/confPW"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?android:selectableItemBackground"
            android:onClick="back"
            android:text="@string/back"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/colorPrimaryDark"
            android:foreground="?android:selectableItemBackground"
            android:onClick="signup2"
            android:text="@string/signup"/>

    </LinearLayout>

</RelativeLayout>