<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="128dp">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_epid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EPIDOP"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/pw"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/enterSMSPw"
                android:visibility="gone"/>

            <Button
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?android:selectableItemBackground"
                android:onClick="forgot_password"
                android:text="@string/forgotPassword"
                android:textAllCaps="false"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?android:selectableItemBackground"
            android:onClick="back"
            android:text="@string/back"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/colorPrimary"
            android:foreground="?android:selectableItemBackground"
            android:onClick="login2"
            android:text="@string/login"/>

    </LinearLayout>

</RelativeLayout>