<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="128dp">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:visibility="invisible"/>

        <LinearLayout
            android:id="@+id/pnll"
            android:layout_width="320dp"
            android:layout_height="192dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/code"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="5" />

            <TextView
                android:id="@+id/phoneNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/enterCodeX"/>

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pnll"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:onClick="send_again"
            android:text="@string/sendNewCode"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?android:selectableItemBackground"
            android:onClick="back"
            android:text="@string/back"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/colorPrimaryDark"
            android:foreground="?android:selectableItemBackground"
            android:onClick="signup4"
            android:text="@string/cont"/>

    </LinearLayout>

</RelativeLayout>