<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="128dp">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:visibility="invisible"/>

        <LinearLayout
            android:id="@+id/pnll"
            android:layout_width="320dp"
            android:layout_height="192dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/enterPhone"
                android:textSize="16sp"/>

            <net.rimoto.intlphoneinput.IntlPhoneInput
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/enterPhoneNotice"/>


        </LinearLayout>


        <Button
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pnll"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="?android:selectableItemBackground"
            android:onClick="skip_phone"
            android:text="@string/skip"
            android:textAllCaps="false"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?android:selectableItemBackground"
            android:onClick="back"
            android:text="@string/back"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/colorPrimaryDark"
            android:foreground="?android:selectableItemBackground"
            android:onClick="signup3"
            android:text="@string/cont"/>

    </LinearLayout>

</RelativeLayout>