<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="128dp">

        <com.onnoeberhard.epotato.PotatoView
            android:id="@+id/potato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:singleLine="true"
            app:text="@string/welcome"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/colorPrimary"
            android:foreground="?android:selectableItemBackground"
            android:onClick="login1"
            android:text="@string/login"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/colorPrimaryDark"
            android:foreground="?android:selectableItemBackground"
            android:onClick="signup1"
            android:text="@string/signup"/>

    </LinearLayout>

</RelativeLayout>